--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "graphql": "^16.5.0",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-select": "^5.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
