--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@react-google-maps/api": "^2.12.0",
     "@sendgrid/mail": "^7.7.0",
     "@stripe/stripe-js": "^1.32.0",
     "axios": "^0.27.2",
@@ -21,8 +22,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.3.0",
-    "stripe": "^9.11.0",
-    "react-select": "^5.4.0"
+    "react-select": "^5.4.0",
+    "stripe": "^9.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
