--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "next": "^12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
     "react-router-dom": "^6.3.0",
-    "stripe": "^9.11.0",
-    "react-select": "^5.4.0"
+    "react-select": "^5.4.0",
+    "react-toastify": "^9.0.5",
+    "stripe": "^9.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
