--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "fs": "0.0.1-security",
     "graphql": "^16.5.0",
+    "moment": "^2.29.4",
     "next": "^12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
